--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.35.0
-pandas==2.2.2
-numpy==1.24.4
-scikit-learn==1.4.2
-tensorflow==2.11.0
-Pillow==10.3.0
-matplotlib==3.7.5
+streamlit
+pandas
+numpy
+scikit-learn
+tensorflow
+Pillow
+matplotlib
