--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit
-pandas
-numpy
-scikit-learn
-tensorflow
-Pillow
-matplotlib
+streamlit==1.35.0
+numpy==1.24.4
+pandas==2.2.2
+scikit-learn==1.4.2
+tensorflow-cpu==2.11.0
+Pillow==10.3.0
